--- a/prepros.cfg
+++ b/prepros.cfg
@@ -6,24 +6,9 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "sass",
+      "name": "kosmedent-plus",
       "path": "",
       "files": {
-        "2e8f9ea2": {
-          "id": "2e8f9ea2",
-          "path": "README.md",
-          "output": "README.html",
-          "name": "README.md",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -64,7 +49,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "f7ecbd96": {
           "id": "f7ecbd96",
@@ -79,7 +65,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "9f975868": {
           "id": "9f975868",
@@ -94,37 +81,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
-        },
-        "0ebf2fc5": {
-          "id": "0ebf2fc5",
-          "path": "js/lib/cycle.carousel.js",
-          "output": "js/lib/cycle.carousel-dist.js",
-          "name": "cycle.carousel.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "73c01a06": {
-          "id": "73c01a06",
-          "path": "js/lib/cycle.js",
-          "output": "js/lib/cycle-dist.js",
-          "name": "cycle.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "bc54be2f": {
           "id": "bc54be2f",
@@ -139,7 +97,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "aed4b452": {
           "id": "aed4b452",
@@ -154,7 +113,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "e27bef2e": {
           "id": "e27bef2e",
@@ -169,7 +129,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "218b2d4e": {
           "id": "218b2d4e",
@@ -261,7 +222,7 @@
           "output": "css/_slick.css",
           "name": "_slick.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -270,27 +231,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "bba941f5": {
-          "id": "bba941f5",
-          "path": "sass/_styledocco.sass",
-          "output": "css/_styledocco.css",
-          "name": "_styledocco.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "7166272a"
+          ],
           "type": "sass"
         },
         "7166272a": {
@@ -599,6 +543,45 @@
           "optimized": false,
           "height": 5,
           "width": 49
+        },
+        "fd7675f3": {
+          "id": "fd7675f3",
+          "path": "img/logo.png",
+          "output": "img/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 4968,
+          "type": "png",
+          "initialSize": 4968,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fb65a490": {
+          "id": "fb65a490",
+          "path": "img/img1.jpg",
+          "output": "img/img1.jpg",
+          "name": "img1.jpg",
+          "category": "IMAGE",
+          "size": 146369,
+          "type": "jpg",
+          "initialSize": 146369,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d8923b63": {
+          "id": "d8923b63",
+          "path": "img/icons-sf3113faad6.png",
+          "output": "img/icons-sf3113faad6.png",
+          "name": "icons-sf3113faad6.png",
+          "category": "IMAGE",
+          "size": 227,
+          "type": "png",
+          "initialSize": 227,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
@@ -618,7 +601,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enabled": false
         },
         "deployment": {
           "ftpHost": "",
@@ -727,7 +711,8 @@
             "autoCompile": false,
             "uglify": true,
             "mangle": true,
-            "sourceMaps": false
+            "sourceMaps": false,
+            "babel": false
           },
           "jade": {
             "autoCompile": true,
@@ -739,7 +724,8 @@
             "doubleQuotes": false
           },
           "kit": {
-            "autoCompile": true
+            "autoCompile": true,
+            "minifyHtml": false
           },
           "slim": {
             "autoCompile": true,
