--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,32 @@
       "name": "kosmedent-plus",
       "path": "",
       "files": {
+        "10714659": {
+          "id": "10714659",
+          "path": "img/marker-big.png",
+          "output": "img/marker-big.png",
+          "name": "marker-big.png",
+          "category": "IMAGE",
+          "size": 2146,
+          "type": "png",
+          "initialSize": 2146,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "44017436": {
+          "id": "44017436",
+          "path": "img/icons/close.png",
+          "output": "img/icons/close.png",
+          "name": "close.png",
+          "category": "IMAGE",
+          "size": 1211,
+          "type": "png",
+          "initialSize": 1211,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -570,15 +596,197 @@
           "height": 0,
           "width": 0
         },
-        "d8923b63": {
-          "id": "d8923b63",
-          "path": "img/icons-sf3113faad6.png",
-          "output": "img/icons-sf3113faad6.png",
-          "name": "icons-sf3113faad6.png",
+        "260b8f07": {
+          "id": "260b8f07",
+          "path": "img/favicon.png",
+          "output": "img/favicon.png",
+          "name": "favicon.png",
           "category": "IMAGE",
-          "size": 227,
+          "size": 20277,
           "type": "png",
-          "initialSize": 227,
+          "initialSize": 20277,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7aa152bd": {
+          "id": "7aa152bd",
+          "path": "img/img2.jpg",
+          "output": "img/img2.jpg",
+          "name": "img2.jpg",
+          "category": "IMAGE",
+          "size": 37697,
+          "type": "jpg",
+          "initialSize": 37697,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "889a1ebe": {
+          "id": "889a1ebe",
+          "path": "img/img3.jpg",
+          "output": "img/img3.jpg",
+          "name": "img3.jpg",
+          "category": "IMAGE",
+          "size": 30911,
+          "type": "jpg",
+          "initialSize": 30911,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "45be695b": {
+          "id": "45be695b",
+          "path": "img/img4.jpg",
+          "output": "img/img4.jpg",
+          "name": "img4.jpg",
+          "category": "IMAGE",
+          "size": 165958,
+          "type": "jpg",
+          "initialSize": 165958,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0e76cce2": {
+          "id": "0e76cce2",
+          "path": "img/doctor.png",
+          "output": "img/doctor.png",
+          "name": "doctor.png",
+          "category": "IMAGE",
+          "size": 3094,
+          "type": "png",
+          "initialSize": 3094,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7ddd0749": {
+          "id": "7ddd0749",
+          "path": "img/med-bag.png",
+          "output": "img/med-bag.png",
+          "name": "med-bag.png",
+          "category": "IMAGE",
+          "size": 2538,
+          "type": "png",
+          "initialSize": 2538,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c8fde595": {
+          "id": "c8fde595",
+          "path": "img/img5.jpg",
+          "output": "img/img5.jpg",
+          "name": "img5.jpg",
+          "category": "IMAGE",
+          "size": 14082,
+          "type": "jpg",
+          "initialSize": 14082,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "260afa75": {
+          "id": "260afa75",
+          "path": "img/icons/quote.png",
+          "output": "img/icons/quote.png",
+          "name": "quote.png",
+          "category": "IMAGE",
+          "size": 1288,
+          "type": "png",
+          "initialSize": 1288,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "82e27d08": {
+          "id": "82e27d08",
+          "path": "img/icons/marker.png",
+          "output": "img/icons/marker.png",
+          "name": "marker.png",
+          "category": "IMAGE",
+          "size": 1196,
+          "type": "png",
+          "initialSize": 1196,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f900254a": {
+          "id": "f900254a",
+          "path": "img/icons/velcom.png",
+          "output": "img/icons/velcom.png",
+          "name": "velcom.png",
+          "category": "IMAGE",
+          "size": 1290,
+          "type": "png",
+          "initialSize": 1290,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1c2fad06": {
+          "id": "1c2fad06",
+          "path": "img/icons/mtc.png",
+          "output": "img/icons/mtc.png",
+          "name": "mtc.png",
+          "category": "IMAGE",
+          "size": 1260,
+          "type": "png",
+          "initialSize": 1260,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2660036f": {
+          "id": "2660036f",
+          "path": "img/icons/phone.png",
+          "output": "img/icons/phone.png",
+          "name": "phone.png",
+          "category": "IMAGE",
+          "size": 1223,
+          "type": "png",
+          "initialSize": 1223,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "468c15f0": {
+          "id": "468c15f0",
+          "path": "img/icons/viber.png",
+          "output": "img/icons/viber.png",
+          "name": "viber.png",
+          "category": "IMAGE",
+          "size": 2096,
+          "type": "png",
+          "initialSize": 2096,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bd5ba6b7": {
+          "id": "bd5ba6b7",
+          "path": "img/icons/skype.png",
+          "output": "img/icons/skype.png",
+          "name": "skype.png",
+          "category": "IMAGE",
+          "size": 1542,
+          "type": "png",
+          "initialSize": 1542,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "477f41de": {
+          "id": "477f41de",
+          "path": "img/icons-s828b313e6f.png",
+          "output": "img/icons-s828b313e6f.png",
+          "name": "icons-s828b313e6f.png",
+          "category": "IMAGE",
+          "size": 4711,
+          "type": "png",
+          "initialSize": 4711,
           "optimized": false,
           "height": 0,
           "width": 0
