inner styles upd

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -778,15 +778,78 @@
           "height": 0,
           "width": 0
         },
-        "477f41de": {
-          "id": "477f41de",
-          "path": "img/icons-s828b313e6f.png",
-          "output": "img/icons-s828b313e6f.png",
-          "name": "icons-s828b313e6f.png",
+        "901dd70e": {
+          "id": "901dd70e",
+          "path": "clinika.html",
+          "output": "clinika.html",
+          "name": "clinika.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6cd8a1e7": {
+          "id": "6cd8a1e7",
+          "path": "img/img8.jpg",
+          "output": "img/img8.jpg",
+          "name": "img8.jpg",
           "category": "IMAGE",
-          "size": 4711,
+          "size": 51726,
+          "type": "jpg",
+          "initialSize": 51726,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e8f8078b": {
+          "id": "e8f8078b",
+          "path": "img/img9.jpg",
+          "output": "img/img9.jpg",
+          "name": "img9.jpg",
+          "category": "IMAGE",
+          "size": 174221,
+          "type": "jpg",
+          "initialSize": 174221,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e2ab18b9": {
+          "id": "e2ab18b9",
+          "path": "img/icons/next.png",
+          "output": "img/icons/next.png",
+          "name": "next.png",
+          "category": "IMAGE",
+          "size": 1974,
           "type": "png",
-          "initialSize": 4711,
+          "initialSize": 1974,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "50fb3c38": {
+          "id": "50fb3c38",
+          "path": "img/icons/prev.png",
+          "output": "img/icons/prev.png",
+          "name": "prev.png",
+          "category": "IMAGE",
+          "size": 1883,
+          "type": "png",
+          "initialSize": 1883,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4c6210be": {
+          "id": "4c6210be",
+          "path": "img/icons-sc40cc11a39.png",
+          "output": "img/icons-sc40cc11a39.png",
+          "name": "icons-sc40cc11a39.png",
+          "category": "IMAGE",
+          "size": 7799,
+          "type": "png",
+          "initialSize": 7799,
           "optimized": false,
           "height": 0,
           "width": 0
