--- a/prepros.cfg
+++ b/prepros.cfg
@@ -953,6 +953,17 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "e8f4c0df": {
+          "id": "e8f4c0df",
+          "path": "zapis.html",
+          "output": "zapis.html",
+          "name": "zapis.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
