--- a/prepros.cfg
+++ b/prepros.cfg
@@ -853,6 +853,64 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "0cf339e2": {
+          "id": "0cf339e2",
+          "path": "sass/_andrew.sass",
+          "output": "css/_andrew.css",
+          "name": "_andrew.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": true,
+          "fullCompass": true,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7166272a"
+          ],
+          "type": "sass"
+        },
+        "17ebe3f5": {
+          "id": "17ebe3f5",
+          "path": "license.html",
+          "output": "license.html",
+          "name": "license.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7742a603": {
+          "id": "7742a603",
+          "path": "img/license-big.jpg",
+          "output": "img/license-big.jpg",
+          "name": "license-big.jpg",
+          "category": "IMAGE",
+          "size": 677993,
+          "type": "jpg",
+          "initialSize": 677993,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e1fc48f9": {
+          "id": "e1fc48f9",
+          "path": "img/license.jpg",
+          "output": "img/license.jpg",
+          "name": "license.jpg",
+          "category": "IMAGE",
+          "size": 52310,
+          "type": "jpg",
+          "initialSize": 52310,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
