--- a/prepros.cfg
+++ b/prepros.cfg
@@ -964,6 +964,17 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "477b2d36": {
+          "id": "477b2d36",
+          "path": "404.html",
+          "output": "404.html",
+          "name": "404.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
