validation, fancybox, favicon

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -930,19 +930,6 @@
           "height": 0,
           "width": 0
         },
-        "1bc6b4da": {
-          "id": "1bc6b4da",
-          "path": "img/icons-sd17ac31eb1.png",
-          "output": "img/icons-sd17ac31eb1.png",
-          "name": "icons-sd17ac31eb1.png",
-          "category": "IMAGE",
-          "size": 16503,
-          "type": "png",
-          "initialSize": 16503,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "77e36e66": {
           "id": "77e36e66",
           "path": "history.html",
@@ -975,6 +962,169 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "0cf339e2": {
+          "id": "0cf339e2",
+          "path": "sass/_andrew.sass",
+          "output": "css/_andrew.css",
+          "name": "_andrew.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": true,
+          "fullCompass": true,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7166272a"
+          ],
+          "type": "sass"
+        },
+        "7742a603": {
+          "id": "7742a603",
+          "path": "img/license-big.jpg",
+          "output": "img/license-big.jpg",
+          "name": "license-big.jpg",
+          "category": "IMAGE",
+          "size": 677993,
+          "type": "jpg",
+          "initialSize": 677993,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "17ebe3f5": {
+          "id": "17ebe3f5",
+          "path": "license.html",
+          "output": "license.html",
+          "name": "license.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e1fc48f9": {
+          "id": "e1fc48f9",
+          "path": "img/license.jpg",
+          "output": "img/license.jpg",
+          "name": "license.jpg",
+          "category": "IMAGE",
+          "size": 52310,
+          "type": "jpg",
+          "initialSize": 52310,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "140706e8": {
+          "id": "140706e8",
+          "path": "js/lib/jquery.fancybox.js",
+          "output": "js/lib/jquery.fancybox-dist.js",
+          "name": "jquery.fancybox.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "babel": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "183c5b38": {
+          "id": "183c5b38",
+          "path": "js/lib/jquery.form-validator.min.js",
+          "output": "js/lib/jquery.form-validator.min-dist.js",
+          "name": "jquery.form-validator.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "babel": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6bfa2290": {
+          "id": "6bfa2290",
+          "path": "sass/_fancybox.sass",
+          "output": "css/_fancybox.css",
+          "name": "_fancybox.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": true,
+          "fullCompass": true,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7166272a"
+          ],
+          "type": "sass"
+        },
+        "a5fa821f": {
+          "id": "a5fa821f",
+          "path": "img/icons/close-narrow.png",
+          "output": "img/icons/close-narrow.png",
+          "name": "close-narrow.png",
+          "category": "IMAGE",
+          "size": 1084,
+          "type": "png",
+          "initialSize": 1084,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5e9b0c00": {
+          "id": "5e9b0c00",
+          "path": "img/icons/arr-left.png",
+          "output": "img/icons/arr-left.png",
+          "name": "arr-left.png",
+          "category": "IMAGE",
+          "size": 1121,
+          "type": "png",
+          "initialSize": 1121,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cbe16bbf": {
+          "id": "cbe16bbf",
+          "path": "img/icons/arr-right.png",
+          "output": "img/icons/arr-right.png",
+          "name": "arr-right.png",
+          "category": "IMAGE",
+          "size": 1114,
+          "type": "png",
+          "initialSize": 1114,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7f104fed": {
+          "id": "7f104fed",
+          "path": "img/icons-s8de896a7b8.png",
+          "output": "img/icons-s8de896a7b8.png",
+          "name": "icons-s8de896a7b8.png",
+          "category": "IMAGE",
+          "size": 17525,
+          "type": "png",
+          "initialSize": 17525,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
