--- a/prepros.cfg
+++ b/prepros.cfg
@@ -867,11 +867,91 @@
           "height": 0,
           "width": 0
         },
+        "0cf339e2": {
+          "id": "0cf339e2",
+          "path": "sass/_andrew.sass",
+          "output": "css/_andrew.css",
+          "name": "_andrew.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": true,
+          "fullCompass": true,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7166272a"
+          ],
+          "type": "sass"
+        },
+        "17ebe3f5": {
+          "id": "17ebe3f5",
+          "path": "license.html",
+          "output": "license.html",
+          "name": "license.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7742a603": {
+          "id": "7742a603",
+          "path": "img/license-big.jpg",
+          "output": "img/license-big.jpg",
+          "name": "license-big.jpg",
+          "category": "IMAGE",
+          "size": 677993,
+          "type": "jpg",
+          "initialSize": 677993,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e1fc48f9": {
+          "id": "e1fc48f9",
+          "path": "img/license.jpg",
+          "output": "img/license.jpg",
+          "name": "license.jpg",
+          "category": "IMAGE",
+          "size": 52310,
+          "type": "jpg",
+          "initialSize": 52310,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "2e078574": {
           "id": "2e078574",
           "path": "advantages.html",
           "output": "advantages.html",
           "name": "advantages.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "77e36e66": {
+          "id": "77e36e66",
+          "path": "history.html",
+          "output": "history.html",
+          "name": "history.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e8f4c0df": {
+          "id": "e8f4c0df",
+          "path": "zapis.html",
+          "output": "zapis.html",
+          "name": "zapis.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
@@ -904,19 +984,6 @@
           "height": 0,
           "width": 0
         },
-        "8cb34834": {
-          "id": "8cb34834",
-          "path": "img/icons/adv-teeth.png",
-          "output": "img/icons/adv-teeth.png",
-          "name": "adv-teeth.png",
-          "category": "IMAGE",
-          "size": 2414,
-          "type": "png",
-          "initialSize": 2414,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "0a35a442": {
           "id": "0a35a442",
           "path": "img/icons/adv-money.png",
@@ -930,40 +997,18 @@
           "height": 0,
           "width": 0
         },
-        "1bc6b4da": {
-          "id": "1bc6b4da",
-          "path": "img/icons-sd17ac31eb1.png",
-          "output": "img/icons-sd17ac31eb1.png",
-          "name": "icons-sd17ac31eb1.png",
+        "8cb34834": {
+          "id": "8cb34834",
+          "path": "img/icons/adv-teeth.png",
+          "output": "img/icons/adv-teeth.png",
+          "name": "adv-teeth.png",
           "category": "IMAGE",
-          "size": 16503,
+          "size": 2414,
           "type": "png",
-          "initialSize": 16503,
+          "initialSize": 2414,
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "77e36e66": {
-          "id": "77e36e66",
-          "path": "history.html",
-          "output": "history.html",
-          "name": "history.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "e8f4c0df": {
-          "id": "e8f4c0df",
-          "path": "zapis.html",
-          "output": "zapis.html",
-          "name": "zapis.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
         },
         "477b2d36": {
           "id": "477b2d36",
@@ -975,6 +1020,65 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "bd69482e": {
+          "id": "bd69482e",
+          "path": "news.html",
+          "output": "news.html",
+          "name": "news.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "4754a0a8": {
+          "id": "4754a0a8",
+          "path": "action.html",
+          "output": "action.html",
+          "name": "action.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "4322bee6": {
+          "id": "4322bee6",
+          "path": "img/icons-s83ad3cc3fc.png",
+          "output": "img/icons-s83ad3cc3fc.png",
+          "name": "icons-s83ad3cc3fc.png",
+          "category": "IMAGE",
+          "size": 16966,
+          "type": "png",
+          "initialSize": 16966,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7e566ef3": {
+          "id": "7e566ef3",
+          "path": "advice.html",
+          "output": "advice.html",
+          "name": "advice.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6be8985c": {
+          "id": "6be8985c",
+          "path": "img/icons/timing.png",
+          "output": "img/icons/timing.png",
+          "name": "timing.png",
+          "category": "IMAGE",
+          "size": 1307,
+          "type": "png",
+          "initialSize": 1307,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
