--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1125,6 +1125,17 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "419b9a14": {
+          "id": "419b9a14",
+          "path": "comments.html",
+          "output": "comments.html",
+          "name": "comments.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
