--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1113,19 +1113,6 @@
           "height": 0,
           "width": 0
         },
-        "7f104fed": {
-          "id": "7f104fed",
-          "path": "img/icons-s8de896a7b8.png",
-          "output": "img/icons-s8de896a7b8.png",
-          "name": "icons-s8de896a7b8.png",
-          "category": "IMAGE",
-          "size": 17525,
-          "type": "png",
-          "initialSize": 17525,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "419b9a14": {
           "id": "419b9a14",
           "path": "comments.html",
@@ -1136,6 +1123,65 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "4754a0a8": {
+          "id": "4754a0a8",
+          "path": "action.html",
+          "output": "action.html",
+          "name": "action.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7e566ef3": {
+          "id": "7e566ef3",
+          "path": "advice.html",
+          "output": "advice.html",
+          "name": "advice.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "bd69482e": {
+          "id": "bd69482e",
+          "path": "news.html",
+          "output": "news.html",
+          "name": "news.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6be8985c": {
+          "id": "6be8985c",
+          "path": "img/icons/timing.png",
+          "output": "img/icons/timing.png",
+          "name": "timing.png",
+          "category": "IMAGE",
+          "size": 1307,
+          "type": "png",
+          "initialSize": 1307,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ef8e7bff": {
+          "id": "ef8e7bff",
+          "path": "img/icons-sff1cece8c2.png",
+          "output": "img/icons-sff1cece8c2.png",
+          "name": "icons-sff1cece8c2.png",
+          "category": "IMAGE",
+          "size": 17985,
+          "type": "png",
+          "initialSize": 17985,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
