--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1182,6 +1182,17 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "e8366bee": {
+          "id": "e8366bee",
+          "path": "vacancy.html",
+          "output": "vacancy.html",
+          "name": "vacancy.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
