--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1193,6 +1193,30 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "96e2fc9d": {
+          "id": "96e2fc9d",
+          "path": "partners.html",
+          "output": "partners.html",
+          "name": "partners.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "5bf249ef": {
+          "id": "5bf249ef",
+          "path": "img/partner1.png",
+          "output": "img/partner1.png",
+          "name": "partner1.png",
+          "category": "IMAGE",
+          "size": 3993,
+          "type": "png",
+          "initialSize": 3993,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
