--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1217,6 +1217,28 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "764580fa": {
+          "id": "764580fa",
+          "path": "treatment.html",
+          "output": "treatment.html",
+          "name": "treatment.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7c2f4647": {
+          "id": "7c2f4647",
+          "path": "price.html",
+          "output": "price.html",
+          "name": "price.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
