--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1239,6 +1239,30 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "b81186f5": {
+          "id": "b81186f5",
+          "path": "doctors.html",
+          "output": "doctors.html",
+          "name": "doctors.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "cef2bba3": {
+          "id": "cef2bba3",
+          "path": "img/doctor1.jpg",
+          "output": "img/doctor1.jpg",
+          "name": "doctor1.jpg",
+          "category": "IMAGE",
+          "size": 30979,
+          "type": "jpg",
+          "initialSize": 30979,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
