--- a/prepros.cfg
+++ b/prepros.cfg
@@ -35,6 +35,19 @@
           "height": 0,
           "width": 0
         },
+        "42372335": {
+          "id": "42372335",
+          "path": "img/marker.png",
+          "output": "img/marker.png",
+          "name": "marker.png",
+          "category": "IMAGE",
+          "size": 1884,
+          "type": "png",
+          "initialSize": 1884,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "44017436": {
           "id": "44017436",
           "path": "img/icons/close.png",
@@ -1170,19 +1183,6 @@
           "height": 0,
           "width": 0
         },
-        "ef8e7bff": {
-          "id": "ef8e7bff",
-          "path": "img/icons-sff1cece8c2.png",
-          "output": "img/icons-sff1cece8c2.png",
-          "name": "icons-sff1cece8c2.png",
-          "category": "IMAGE",
-          "size": 17985,
-          "type": "png",
-          "initialSize": 17985,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "e8366bee": {
           "id": "e8366bee",
           "path": "vacancy.html",
@@ -1260,6 +1260,134 @@
           "size": 30979,
           "type": "jpg",
           "initialSize": 30979,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7cf6132d": {
+          "id": "7cf6132d",
+          "path": "contacts.html",
+          "output": "contacts.html",
+          "name": "contacts.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "b67bb3a6": {
+          "id": "b67bb3a6",
+          "path": "img/icons/mob.png",
+          "output": "img/icons/mob.png",
+          "name": "mob.png",
+          "category": "IMAGE",
+          "size": 2011,
+          "type": "png",
+          "initialSize": 2011,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "af0d6955": {
+          "id": "af0d6955",
+          "path": "img/icons/mail.png",
+          "output": "img/icons/mail.png",
+          "name": "mail.png",
+          "category": "IMAGE",
+          "size": 1679,
+          "type": "png",
+          "initialSize": 1679,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "53fceaf6": {
+          "id": "53fceaf6",
+          "path": "img/icons/viber-small.png",
+          "output": "img/icons/viber-small.png",
+          "name": "viber-small.png",
+          "category": "IMAGE",
+          "size": 2059,
+          "type": "png",
+          "initialSize": 2059,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f8efd30f": {
+          "id": "f8efd30f",
+          "path": "img/icons/skype-color.png",
+          "output": "img/icons/skype-color.png",
+          "name": "skype-color.png",
+          "category": "IMAGE",
+          "size": 2126,
+          "type": "png",
+          "initialSize": 2126,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ee168292": {
+          "id": "ee168292",
+          "path": "img/icons/mtc-color.png",
+          "output": "img/icons/mtc-color.png",
+          "name": "mtc-color.png",
+          "category": "IMAGE",
+          "size": 1328,
+          "type": "png",
+          "initialSize": 1328,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bf854cf6": {
+          "id": "bf854cf6",
+          "path": "img/icons/call.png",
+          "output": "img/icons/call.png",
+          "name": "call.png",
+          "category": "IMAGE",
+          "size": 1267,
+          "type": "png",
+          "initialSize": 1267,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c9bd6b57": {
+          "id": "c9bd6b57",
+          "path": "img/icons/fax.png",
+          "output": "img/icons/fax.png",
+          "name": "fax.png",
+          "category": "IMAGE",
+          "size": 1470,
+          "type": "png",
+          "initialSize": 1470,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "89b42397": {
+          "id": "89b42397",
+          "path": "img/icons/close-narrow-dark.png",
+          "output": "img/icons/close-narrow-dark.png",
+          "name": "close-narrow-dark.png",
+          "category": "IMAGE",
+          "size": 1213,
+          "type": "png",
+          "initialSize": 1213,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "498614e9": {
+          "id": "498614e9",
+          "path": "img/icons-s4f1ecb2486.png",
+          "output": "img/icons-s4f1ecb2486.png",
+          "name": "icons-s4f1ecb2486.png",
+          "category": "IMAGE",
+          "size": 24646,
+          "type": "png",
+          "initialSize": 24646,
           "optimized": false,
           "height": 0,
           "width": 0
