--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1263,6 +1263,106 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "df7ea070": {
+          "id": "df7ea070",
+          "path": "doctors_inner.html",
+          "output": "doctors_inner.html",
+          "name": "doctors_inner.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6382006a": {
+          "id": "6382006a",
+          "path": "nonresidental.html",
+          "output": "nonresidental.html",
+          "name": "nonresidental.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0961ed7d": {
+          "id": "0961ed7d",
+          "path": "img/train.png",
+          "output": "img/train.png",
+          "name": "train.png",
+          "category": "IMAGE",
+          "size": 3468,
+          "type": "png",
+          "initialSize": 3468,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b86ed47a": {
+          "id": "b86ed47a",
+          "path": "img/flower.png",
+          "output": "img/flower.png",
+          "name": "flower.png",
+          "category": "IMAGE",
+          "size": 4086,
+          "type": "png",
+          "initialSize": 4086,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ab36355b": {
+          "id": "ab36355b",
+          "path": "img/food.png",
+          "output": "img/food.png",
+          "name": "food.png",
+          "category": "IMAGE",
+          "size": 6551,
+          "type": "png",
+          "initialSize": 6551,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1b90061e": {
+          "id": "1b90061e",
+          "path": "img/hotel.png",
+          "output": "img/hotel.png",
+          "name": "hotel.png",
+          "category": "IMAGE",
+          "size": 3535,
+          "type": "png",
+          "initialSize": 3535,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "397414cb": {
+          "id": "397414cb",
+          "path": "img/museum.png",
+          "output": "img/museum.png",
+          "name": "museum.png",
+          "category": "IMAGE",
+          "size": 2251,
+          "type": "png",
+          "initialSize": 2251,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "87f60f80": {
+          "id": "87f60f80",
+          "path": "img/bus.png",
+          "output": "img/bus.png",
+          "name": "bus.png",
+          "category": "IMAGE",
+          "size": 2666,
+          "type": "png",
+          "initialSize": 2666,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
