--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1491,6 +1491,17 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "4d203b9b": {
+          "id": "4d203b9b",
+          "path": "zapis-success.html",
+          "output": "zapis-success.html",
+          "name": "zapis-success.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
